deploy/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-mobina
  namespace: gophers
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-mobina
  template:
    metadata:
      labels:
        app: app-mobina
    spec:
      containers:
      - name: app-mobina
        image: registry.pinsvc.net/gophers/app-mobina:v3
        ports:
        - containerPort: 8080
