deploy/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: mobina-app
  labels:
    app: mobina-app
  namespace: gophers
spec:
  containers:
    - name: mobina-app
      image: registry.pinsvc.net/gophers/app-mobina:v3
      ports:
        - containerPort: 8080
