deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-mobina
  namespace: gophers
spec:
  type: ClusterIP
  selector:
    app: app-mobina
  ports:
    - name: http
      port: 80 #the port of your service resource
      targetPort: 8080 #your backend actual port
