deploy/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-mobina
  namespace: gophers
spec:
  ingressClassName: kong
  rules:
    - host: mobina-backend.asiatech.ptp
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-mobina  ## your service name from before
                port:
                  number: 80            ## your service port
